err/bbug-dynamics.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bbug_dynamics'...
Compiling './lib/python3.5/site-packages/bbug_dynamics/bbug.py'...
***   File "./lib/python3.5/site-packages/bbug_dynamics/bbug.py", line 71
    url = self.url + '/client/' + `clientid`
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bbug_dynamics/dynamics.py'...
***   File "./lib/python3.5/site-packages/bbug_dynamics/dynamics.py", line 69
    print m
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bbug_dynamics/synchronization.py'...
***   File "./lib/python3.5/site-packages/bbug_dynamics/synchronization.py", line 32
    print m
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bbug_dynamics/tasks.py'...
***   File "./lib/python3.5/site-packages/bbug_dynamics/tasks.py", line 21
    self.print_message('There are ' + `len(accounts_for_update)` + ' to update')
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bbug_dynamics-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
